create tech stack part

--- a/index.html
+++ b/index.html
@@ -41,9 +41,52 @@
       I build things for web
     </p>
     <div class="human-box">
-      <img class="human-img" src="./img/human.png" alt="human">
+      <img class="human-img" src="./img/human.svg" alt="human">
     </div>
   </div>  
+
+  <div class="stack">
+    <p class="stack-title">My Tech Stack</p>
+    <p class="stack-desc"> Technologies I’ve been working with recently</p>
+    <div class="stack-icons">
+      <div class="stack-icon-container">
+        <img class="stack-icon" src="./img/vscode-icons_file-type-html.svg" alt="html-icon">
+      </div>
+      <div class="stack-icon-container">
+        <img class="stack-icon" src="./img/vscode-icons_file-type-css.svg" alt="css-icon">
+      </div>
+      <div class="stack-icon-container">
+        <img class="stack-icon" src="./img/vscode-icons_file-type-js-official.svg" alt="js-icon">
+      </div>
+      <div class="stack-icon-container">
+        <img class="stack-icon" src="./img/logos_react.svg" alt="react-icon">
+      </div>
+      <div class="stack-icon-container">
+        <img class="stack-icon" src="./img/redux-icon.svg" alt="redux-icon">
+      </div>
+      <div class="stack-icon-container">
+        <img class="stack-icon" src="./img/logos_bootstrap.svg" alt="bootstrap-icon">
+      </div>
+      <div class="stack-icon-container">
+        <img class="stack-icon" src="./img/vscode-icons_file-type-tailwind.svg" alt="tailwind-icon">
+      </div>
+      <div class="stack-icon-container">
+        <img class="stack-icon" src="./img/logos_sass.svg" alt="sass-icon">
+      </div>
+      <div class="stack-icon-container">
+        <img class="stack-icon" src="./img/logos_git-icon.svg" alt="git-icon">
+      </div>
+      <div class="stack-icon-container">
+        <img class="stack-icon" src="./img/cib_greensock.svg" alt="greensock-icon">
+      </div>
+      <div class="stack-icon-container">
+        <img class="stack-icon" src="./img/vscode-icons_file-type-vscode.svg" alt="vscode-icon">
+      </div>
+      <div class="stack-icon-container">
+        <img class="stack-icon" src="./img/akar-icons_github-fill.svg" alt="github-icon">
+      </div>
+    </div>
+  </div>
 
   <footer>
   </footer>
