--- a/index.html
+++ b/index.html
@@ -88,6 +88,260 @@
     </div>
   </div>
 
+  <div class="projects">
+    <p class="projects-title">Projects</p>
+    <p class="projects-desc">Things I've built so far</p>
+    
+    <div class="projects-grid">
+      <div class="project">
+        <div class="project-image-container">
+          <img src="./img/project-1.svg" alt="" class="project-image">
+        </div>
+
+        <div class="project-buttom">
+          <p class="project-title">Project Tile goes here</p>
+          <p class="project-desc">
+            This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content
+          </p>
+
+          <p class="project-stack">Tech stack : <span class="project-span">HTML , JavaScript, SASS, React</span></p>
+
+          <div class="projects-links">
+            <div class="project-link-container">
+              <div class="project-link-image-container">
+                <img 
+                  src="./img/akar-icons_link-chain.svg" 
+                  alt="" 
+                  class="project-link-image"
+                >
+              </div>              
+              <a href="#" class="project-link">Live Preview</a>
+            </div>
+
+            <div class="project-link-container">
+              <div class="project-link-image-container">
+                <img 
+                  src="./img/akar-icons_github-fill.svg" 
+                  alt="" 
+                  class="project-link-image"
+                >
+              </div>              
+              <a href="#" class="project-link">View Code</a>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+      <div class="project">
+        <div class="project-image-container">
+          <img src="./img/project-2.svg" alt="" class="project-image">
+        </div>
+
+        <div class="project-buttom">
+          <p class="project-title">Project Tile goes here</p>
+          <p class="project-desc">
+            This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content
+          </p>
+
+          <p class="project-stack">Tech stack : <span class="project-span">HTML , JavaScript, SASS, React</span></p>
+
+          <div class="projects-links">
+            <div class="project-link-container">
+              <div class="project-link-image-container">
+                <img 
+                  src="./img/akar-icons_link-chain.svg" 
+                  alt="" 
+                  class="project-link-image"
+                >
+              </div>              
+              <a href="#" class="project-link">Live Preview</a>
+            </div>
+
+            <div class="project-link-container">
+              <div class="project-link-image-container">
+                <img 
+                  src="./img/akar-icons_github-fill.svg" 
+                  alt="" 
+                  class="project-link-image"
+                >
+              </div>              
+              <a href="#" class="project-link">View Code</a>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+      <div class="project">
+        <div class="project-image-container">
+          <img src="./img/project-3.svg" alt="" class="project-image">
+        </div>
+
+        <div class="project-buttom">
+          <p class="project-title">Project Tile goes here</p>
+          <p class="project-desc">
+            This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content
+          </p>
+
+          <p class="project-stack">Tech stack : <span class="project-span">HTML , JavaScript, SASS, React</span></p>
+
+          <div class="projects-links">
+            <div class="project-link-container">
+              <div class="project-link-image-container">
+                <img 
+                  src="./img/akar-icons_link-chain.svg" 
+                  alt="" 
+                  class="project-link-image"
+                >
+              </div>              
+              <a href="#" class="project-link">Live Preview</a>
+            </div>
+
+            <div class="project-link-container">
+              <div class="project-link-image-container">
+                <img 
+                  src="./img/akar-icons_github-fill.svg" 
+                  alt="" 
+                  class="project-link-image"
+                >
+              </div>              
+              <a href="#" class="project-link">View Code</a>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+      <div class="project">
+        <div class="project-image-container">
+          <img src="./img/project-4.svg" alt="" class="project-image">
+        </div>
+
+        <div class="project-buttom">
+          <p class="project-title">Project Tile goes here</p>
+          <p class="project-desc">
+            This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content
+          </p>
+
+          <p class="project-stack">Tech stack : <span class="project-span">HTML , JavaScript, SASS, React</span></p>
+
+          <div class="projects-links">
+            <div class="project-link-container">
+              <div class="project-link-image-container">
+                <img 
+                  src="./img/akar-icons_link-chain.svg" 
+                  alt="" 
+                  class="project-link-image"
+                >
+              </div>              
+              <a href="#" class="project-link">Live Preview</a>
+            </div>
+
+            <div class="project-link-container">
+              <div class="project-link-image-container">
+                <img 
+                  src="./img/akar-icons_github-fill.svg" 
+                  alt="" 
+                  class="project-link-image"
+                >
+              </div>              
+              <a href="#" class="project-link">View Code</a>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+      <div class="project">
+        <div class="project-image-container">
+          <img src="./img/project-5.svg" alt="" class="project-image">
+        </div>
+
+        <div class="project-buttom">
+          <p class="project-title">Project Tile goes here</p>
+          <p class="project-desc">
+            This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content
+          </p>
+
+          <p class="project-stack">Tech stack : <span class="project-span">HTML , JavaScript, SASS, React</span></p>
+
+          <div class="projects-links">
+            <div class="project-link-container">
+              <div class="project-link-image-container">
+                <img 
+                  src="./img/akar-icons_link-chain.svg" 
+                  alt="" 
+                  class="project-link-image"
+                >
+              </div>              
+              <a href="#" class="project-link">Live Preview</a>
+            </div>
+
+            <div class="project-link-container">
+              <div class="project-link-image-container">
+                <img 
+                  src="./img/akar-icons_github-fill.svg" 
+                  alt="" 
+                  class="project-link-image"
+                >
+              </div>              
+              <a href="#" class="project-link">View Code</a>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+      <div class="project">
+        <div class="project-image-container">
+          <img src="./img/project-6.svg" alt="" class="project-image">
+        </div>
+
+        <div class="project-buttom">
+          <p class="project-title">Project Tile goes here</p>
+          <p class="project-desc">
+            This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content
+          </p>
+
+          <p class="project-stack">Tech stack : <span class="project-span">HTML , JavaScript, SASS, React</span></p>
+
+          <div class="projects-links">
+            <div class="project-link-container">
+              <div class="project-link-image-container">
+                <img 
+                  src="./img/akar-icons_link-chain.svg" 
+                  alt="" 
+                  class="project-link-image"
+                >
+              </div>              
+              <a href="#" class="project-link">Live Preview</a>
+            </div>
+
+            <div class="project-link-container">
+              <div class="project-link-image-container">
+                <img 
+                  src="./img/akar-icons_github-fill.svg" 
+                  alt="" 
+                  class="project-link-image"
+                >
+              </div>              
+              <a href="#" class="project-link">View Code</a>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <footer>
   </footer>
 </body>
