--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="./img/logo 1.svg" alt="logo 1">
+      <img src="./img/logo-1.svg" alt="logo 1">
     </div>
     
     <div class="right-side">
@@ -343,6 +343,38 @@
   </div>
 
   <footer>
+    <div class="first-footer">
+      <img src="./img/logo-2.svg" alt="">
+      <div class="right-first-footer">
+        <p>+1 555 505 5050</p>
+        <p>info@designmodo.com</p>
+        <div class="social-icons">
+          <img src="./img/Vector.svg" alt="github-icon">
+          <img src="./img/ant-design_twitter-circle-filled.svg" alt="twitter-icon">
+          <img src="./img/entypo-social_linkedin-with-circle.svg" alt="linkedin-icon">
+        </div>
+      </div>
+    </div>
+
+    <hr>
+        
+    <div class="second-footer">
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Tech Stack</a>
+        <a href="#">Projects</a>
+        <a href="#">Contact</a>
+      </nav>      
+
+      <p class="designed-by">
+        Designed and built by 
+        <span class="gradient">Pavan MG</span> with 
+        <span class="gradient">Love</span> & 
+        <span class="gradient">Coffee</span>
+      </p>
+    </div>
+
   </footer>
 </body>
 </html>
