make responsive design for mobile phones  in footer and header

--- a/index.html
+++ b/index.html
@@ -359,13 +359,13 @@
     <hr>
         
     <div class="second-footer">
-      <nav>
+      <div class="nav-footer">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Tech Stack</a>
         <a href="#">Projects</a>
         <a href="#">Contact</a>
-      </nav>      
+      </div>      
 
       <p class="designed-by">
         Designed and built by 
